<resources>
    <string name="app_name">chat clone</string>
    <string name="title_activity_loguin">LoguinActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="deixe_de_presepada_e_crie_sua_conta">deixe de presepada e crie sua conta</string>
    <string name="que_viajem_vei">que viajem vei !!!</string>
    <string name="se_lique_viu_aqui_sua_senha">se ligue viu aqui é sua senha</string>
    <string name="bote_aquele_email_massa_vá">bote aquele email massa vá</string>
    <string name="bor_que_ja_to_agoniado">borá que ja to agoniado</string>
    <string name="diga_teu_nome_vei">diga teu nome vei</string>
    <string name="todo">TODO</string>
</resources>